tests/snapshots/regression/semantic_types__patterns__non_exhaustive_bool_error.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/semantic_types/patterns/non_exhaustive_bool_error.flx
exit_code: 1

[ 1 of 18] Compiling  Add
[ 2 of 18] Compiling  Assert
[ 3 of 18] Compiling  Debug
[ 4 of 18] Compiling  Array
[ 5 of 18] Compiling  List
[ 6 of 18] Compiling  Either
[ 7 of 18] Compiling  Eq
[ 8 of 18] Compiling  IO
[ 9 of 18] Compiling  Math
[10 of 18] Compiling  Num
[11 of 18] Compiling  Numeric
[12 of 18] Compiling  Option
[13 of 18] Compiling  Ord
[14 of 18] Compiling  Primops
[15 of 18] Compiling  Semigroup
[16 of 18] Compiling  Show
[17 of 18] Compiling  String
• 1 error • tests/fixtures/semantic_types/patterns/non_exhaustive_bool_error.flx
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  tests/fixtures/semantic_types/patterns/non_exhaustive_bool_error.flx:3:5
  |
3 |     match flag {
  |     ^^^^^^^^^^^^
4 |         false -> 0,
  | ^^^^^^^^^^^^^^^^^^^
5 |     }
  | ^^^^^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
